--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -1,28 +1,22 @@
 .App {
   text-align: center;
+  color: dodgerblue;
+}
+.smurfList{
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 25px;
+  width:98%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
+.smurf{
   height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  width: 30%;
+  margin:20px;
+  background-color: white;
+  color: black;
+border: 3px solid dodgerblue;
+border-radius: 10px;
+box-shadow: 3px 3px 5px black ;
 }
