--- a/smurfs/src/index.css
+++ b/smurfs/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Irish Grover', cursive;
+  background-image:radial-gradient(wheat, lightgreen);
 }
